--- a/docs/03-config/sample_config.yaml
+++ b/docs/03-config/sample_config.yaml
@@ -1,12 +1,14 @@
 # ORBIT Sample Config (orbit.yaml)
 
-# Last edited: 2025-11-05
+# Last edited: 2025-11-09
 
 project:
 name: ORBIT
 version: 1
 
 paths:
+# Configurable via ORBIT_DATA_DIR environment variable (defaults to data/)
+# Example: export ORBIT_DATA_DIR=/srv/orbit/data
 data_dir: data/
 raw_dir: data/raw/
 curated_dir: data/curated/
