--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # Copy this file to `.env` and fill in your secrets. Do NOT commit your real keys.
+# This file is automatically loaded by ORBIT - no need to manually export!
 
 # Alpaca (news websocket)
 ALPACA_API_KEY=your_alpaca_api_key
