--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,26 @@
 # Copy this file to `.env` and fill in your secrets. Do NOT commit your real keys.
 # This file is automatically loaded by ORBIT - no need to manually export!
 
-# Alpaca (news websocket)
+# Alpaca (news WebSocket + REST API) - FREE tier available
+# Sign up at: https://alpaca.markets
+
+# Single key mode (WebSocket only):
 ALPACA_API_KEY=your_alpaca_api_key
 ALPACA_API_SECRET=your_alpaca_api_secret
+
+# Multi-key mode (for historical backfill 5x throughput):
+# REST API: ~200 RPM per key, 5 keys = ~1,000 RPM combined
+# Uncomment and fill in for multi-key mode:
+# ALPACA_API_KEY_1=your_alpaca_key_1
+# ALPACA_API_SECRET_1=your_alpaca_secret_1
+# ALPACA_API_KEY_2=your_alpaca_key_2
+# ALPACA_API_SECRET_2=your_alpaca_secret_2
+# ALPACA_API_KEY_3=your_alpaca_key_3
+# ALPACA_API_SECRET_3=your_alpaca_secret_3
+# ALPACA_API_KEY_4=your_alpaca_key_4
+# ALPACA_API_SECRET_4=your_alpaca_secret_4
+# ALPACA_API_KEY_5=your_alpaca_key_5
+# ALPACA_API_SECRET_5=your_alpaca_secret_5
 
 # Reddit (OAuth)
 REDDIT_CLIENT_ID=your_reddit_client_id
@@ -11,6 +28,8 @@ REDDIT_CLIENT_SECRET=your_reddit_client_secret
 REDDIT_USER_AGENT=ORBIT/1.0 by you@example.com
 
 # Gemini API keys (support up to 5 keys for multi-key rotation)
+# Model: gemini-2.5-flash-lite (15 RPM, 250K TPM, 1,000 RPD per key)
+# Get keys at: https://makersuite.google.com/app/apikey
 GEMINI_API_KEY_1=your_gemini_key_1
 GEMINI_API_KEY_2=
 GEMINI_API_KEY_3=
