alpaca multi key support

--- a/.env.example
+++ b/.env.example
@@ -4,15 +4,18 @@
 # Alpaca (news WebSocket + REST API) - FREE tier available
 # Sign up at: https://alpaca.markets
 
-# Single key mode (WebSocket only):
+# WebSocket key (for real-time news streaming):
+# Used by: orbit ingest news
 ALPACA_API_KEY=your_alpaca_api_key
 ALPACA_API_SECRET=your_alpaca_api_secret
 
-# Multi-key mode (for historical backfill 5x throughput):
-# REST API: ~200 RPM per key, 5 keys = ~1,000 RPM combined
-# Uncomment and fill in for multi-key mode:
-# ALPACA_API_KEY_1=your_alpaca_key_1
-# ALPACA_API_SECRET_1=your_alpaca_secret_1
+# REST API keys (for historical backfill only):
+# Used by: orbit ingest news-backfill
+# Multi-key support: ~200 RPM per key, 5 keys = ~1,000 RPM combined (5x throughput)
+# You can use the same key for both WebSocket and REST, or separate keys for rate limit isolation
+ALPACA_API_KEY_1=your_alpaca_key_1
+ALPACA_API_SECRET_1=your_alpaca_secret_1
+# Optional: Add more keys for faster historical data fetching
 # ALPACA_API_KEY_2=your_alpaca_key_2
 # ALPACA_API_SECRET_2=your_alpaca_secret_2
 # ALPACA_API_KEY_3=your_alpaca_key_3
